libicon: reorder gradient stops when loading from BMessage

Some files have gradients stops stored in an incorrect order.

Fixes #14210